--- a/Project-3/styles.css
+++ b/Project-3/styles.css
@@ -1,10 +1,30 @@
 body{
     background-color: rgb(255, 255, 255);
 }
-.border{
-    width:40vw;
-    background-color: aliceblue;
+.main{
+    background-color: wheat;
     height: max-content;
-    margin-left: 0;
+    padding:10px;
+    width: 70%;
+}
+.navbar{
+    background-color: aliceblue;
+    border-radius: 10px;
+    height: min-content;
     
+}
+.main-section{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    text-wrap: wrap;
+    width: 100%;
+}
+.head{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.codebox{
+    background-color: rgb(35, 39, 46);
+    color:aliceblue;
+    border-radius: 10px;
+    padding: 10px;
 }
