--- a/Project-3/styles.css
+++ b/Project-3/styles.css
@@ -1,36 +1,63 @@
-body{
+body {
     background-color: rgb(255, 255, 255);
 }
-.main{
-    background-color: wheat;
-    height: max-content;
-    padding:10px;
-    width: 70%;
-}
-#navbar{
-    position: fixed;
+
+#navbar {
+    position: absolute;
     left: 0;
-    width: max-content;
-    /* border-right: 2px solid black; */
-    height: max-content;
-    background-color: aliceblue;
-    border-radius: 10px;
-    padding: 5px;
+    width:250px;
+    border-right: 2px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
-.main-section{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    text-wrap: wrap;
-    width: 80%;
-    margin-left: 30%;
+#main-doc {
+    margin-left: 300px;
     padding: 10px;
 }
-.head{
-    font-family: Arial, Helvetica, sans-serif;
+header {
+    font-weight: 600;
+    font-size: large;
+    text-align: center;
+    font-size: 1.8em;
+    margin: 10px 0 0 10px;
 }
-.codebox{
+#main-doc header {
+    font-weight: 600;
+    font-size: large;
+    text-align: left;
+    font-size: 1.8em;
+    margin: 0;
+}
+nav {
+    height: 100vh;
+    border-right: 1px solid black;
+}
+/* nav>ul>li {
+    list-style: none;
+    border: 2px solid black;
+} */
+
+nav>ul>li>a {
+    text-decoration: none;
+    color:black;
+}
+.navbar-item{
+    list-style: none;
+    border-top:2px solid black;
+    text-align: left;
+    
+}
+ul{
+    gap:10px;
+}
+
+
+
+
+/* .codebox{
     background-color: rgb(35, 39, 46);
     color:aliceblue;
     border-radius: 10px;
     padding: 10px;
-}
+} */
