--- a/Project-3/styles.css
+++ b/Project-3/styles.css
@@ -3,25 +3,25 @@ body {
 }
 
 #navbar {
-    position: absolute;
+    position: fixed;
     left: 0;
-    width:250px;
+    top: 0;
+    width: 250px;
     border-right: 2px solid black;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
 }
+
 #main-doc {
     margin-left: 300px;
     padding: 10px;
 }
+
 header {
     font-weight: 600;
     font-size: large;
     text-align: center;
     font-size: 1.8em;
-    margin: 10px 0 0 10px;
 }
+
 #main-doc header {
     font-weight: 600;
     font-size: large;
@@ -29,35 +29,63 @@ header {
     font-size: 1.8em;
     margin: 0;
 }
+
 nav {
     height: 100vh;
     border-right: 1px solid black;
 }
-/* nav>ul>li {
-    list-style: none;
-    border: 2px solid black;
-} */
 
-nav>ul>li>a {
+a {
     text-decoration: none;
-    color:black;
+    color: black;
+    cursor: pointer;
 }
-.navbar-item{
+
+.navbar-item {
     list-style: none;
-    border-top:2px solid black;
+    border-top: 1px solid black;
     text-align: left;
-    
-}
-ul{
-    gap:10px;
+    margin-bottom: 20px;
+    padding-top:10px;
 }
 
+ul {
+    padding: 0;
+}
 
+@media only screen and (max-width:815px) {
+    #navbar {
+        position: absolute;
+        left: 0;
+        top: 0;
+        max-height: 400px;
+        border: none;
+        z-index: 1;
+        /* border: 1px solid pink; */
+        width: 100%;
+    }
 
+    #navbar ul {
+        border: 1px solid black;
+    }
 
-/* .codebox{
+    #main-doc {
+        position: relative;
+        margin-top: 500px;
+        margin-left: 0;
+    }
+    .navbar-item {
+        list-style: none;
+        border-top: 1px solid black;
+        margin-bottom: 20px;
+        text-align: left;
+    }
+}
+
+code{
     background-color: rgb(35, 39, 46);
-    color:aliceblue;
-    border-radius: 10px;
+    color:white;
+    border-radius: 8px;
     padding: 10px;
-} */
+    display: block;
+}
