--- a/Project-4/styles.css
+++ b/Project-4/styles.css
@@ -1,28 +1,23 @@
 #header{
     font-family: Helvetica, sans-serif;
-    font-size: 50px;
+    font-size: 60px;
     border: 1px solid;
+    padding: 10px;
+}
+#header-img{
+    width: 70px;
 }
 .topbar{
-    position: fixed;
     display: flex;
-    width: 99vw;
     flex-direction: row;
-    margin: auto;
+    justify-content: flex-start;
     border: 1px solid;
-}
-.nav-bar{
-    display: flex;
-    flex-direction: row;
-    margin-left:auto;
-    margin-right: auto;
+    padding: 10px;
 }
 .list{
-    border: 1px solid;
+    display: flex;
     list-style: none;
     padding: 20px;
-}
-li{
-    display: inline;
-    margin-left: 30px;
+    border: 1px solid;
+    margin-left:60px;
 }
