--- a/Project-4/styles.css
+++ b/Project-4/styles.css
@@ -1,26 +1,69 @@
+:root{
+    --background:white;
+    --card:rgb(238, 238, 238);
+}
+
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: var(--background);
+}
 #header{
-    font-family: Helvetica, sans-serif;
-    font-size: 60px;
-    border: 1px solid;
-    padding: 10px;
-}
-#header-img{
-    width: 70px;
-}
-.topbar{
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: flex-start ;
     border: 1px solid;
+    height: 75px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.logo{
+    /* border:1px solid; */
+    width:30%;
+}
+.logo>img{
+    height:100%;
+    width: 100%;
+}
+#nav-bar{
+    margin-left:40vw;
+    display: flex;
+    width: max-content;
     padding: 10px;
 }
-.list{
-    display: flex;
+ul{
     list-style: none;
-    padding: 20px;
-    border: 1px solid;
-    margin-left:60px;
+    display: flex;
+    flex-direction: row;
+    padding:10px;
 }
-.item{
+ul>li{
+    padding:5px;
     border: 1px solid;
+    margin-right:50px;
+    margin-left:20px;
+}
+li>a{
+    text-decoration: none;
+    color:black;
+}
+li>a:active{
+    color:black;
+    cursor: pointer;
+}
+.card1{
+    width: max-content;   
+    background-color:var(--card);
+    /* border: 1px solid; */
+    margin:auto;
+    padding:70px;
+    margin-top:5%;
+    border-radius:10px;
+}
+.card1 h2{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 70px;
 }
