--- a/Project-4/styles.css
+++ b/Project-4/styles.css
@@ -67,3 +67,61 @@ li>a:active{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 70px;
 }
+.btn{
+    display: block;
+    width: max-content;
+    height: max-content;
+    background-color: orange;
+    color:black;
+    padding:10px;
+    margin-top:10px;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius:10px;
+    border:none;
+}
+#email{ 
+    display: block;
+    width: 30vw;
+    margin:auto;
+    padding:10px;
+    border-radius:10px;
+    border:none;
+}
+h5{
+    font-weight:100;
+}
+.nav-link{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+h3{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: inherit;
+    font-weight: 600;
+}
+.advert{
+    
+    display: flex;
+    width:80%;
+    height: min-content;
+    /* border:1px solid; */
+    margin-top:10px;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius: 10px;
+}
+.icon{
+    transform:scale(1);
+    margin-left: 100px;
+}
+.icon>img{
+    border-radius: 10px;
+}
+.desc{
+    padding: 10px;
+    margin-left:10px;
+    text-wrap: wrap;
+}
+iframe{
+    width: 300px;
+}
