--- a/Project-4/styles.css
+++ b/Project-4/styles.css
@@ -1,127 +1,166 @@
-:root{
-    --background:white;
-    --card:rgb(238, 238, 238);
+:root {
+    --background: white;
+    --card: rgb(238, 238, 238);
 }
-
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+body {
     background-color: var(--background);
 }
-#header{
+#header {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start ;
+    justify-content: flex-start;
     border: 1px solid;
     height: 75px;
     padding-left: 20px;
     padding-right: 20px;
 }
-.logo{
+.logo {
     /* border:1px solid; */
-    width:30%;
+    width: 30%;
 }
-.logo>img{
-    height:100%;
+.logo>img {
+    height: 100%;
     width: 100%;
 }
-#nav-bar{
-    margin-left:40vw;
+
+#nav-bar {
+    margin-left: 40vw;
     display: flex;
     width: max-content;
     padding: 10px;
 }
-ul{
+
+ul {
     list-style: none;
     display: flex;
     flex-direction: row;
-    padding:10px;
+    padding: 10px;
 }
-ul>li{
-    padding:5px;
+
+ul>li {
+    padding: 5px;
     border: 1px solid;
-    margin-right:50px;
-    margin-left:20px;
+    margin-right: 50px;
+    margin-left: 20px;
 }
-li>a{
+
+li>a {
     text-decoration: none;
-    color:black;
+    color: black;
 }
-li>a:active{
-    color:black;
+li>a:active {
+    color: black;
     cursor: pointer;
 }
-.card1{
-    width: max-content;   
-    background-color:var(--card);
-    /* border: 1px solid; */
-    margin:auto;
-    padding:70px;
-    margin-top:5%;
-    border-radius:10px;
+.card1 {
+    min-width: min-content;
+    background-color: var(--card);
+    margin: auto;
+    padding: 70px;
+    margin-top: 5%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(21, 21, 21, 0.1);
 }
-.card1 h2{
+
+.card1 h2 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 70px;
 }
-.btn{
+.btn {
     display: block;
     width: max-content;
     height: max-content;
     background-color: orange;
-    color:black;
-    padding:10px;
-    margin-top:10px;
-    margin-left:auto;
-    margin-right:auto;
-    border-radius:10px;
-    border:none;
+    color: black;
+    padding: 10px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    border: none;
 }
-#email{ 
+
+#email {
     display: block;
     width: 30vw;
-    margin:auto;
-    padding:10px;
-    border-radius:10px;
-    border:none;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
 }
-h5{
-    font-weight:100;
+h5 {
+    font-weight: 100;
 }
-.nav-link{
+.nav-link {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-h3{
+h3 {
     font-family: Arial, Helvetica, sans-serif;
     font-size: inherit;
     font-weight: 600;
 }
-.advert{
-    
+.advert {
+
     display: flex;
-    width:80%;
+    width: 80%;
     height: min-content;
-    /* border:1px solid; */
-    margin-top:10px;
-    margin-left:auto;
-    margin-right:auto;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 10px;
 }
-.icon{
-    transform:scale(1);
+.icon {
+    transform: scale(1);
     margin-left: 100px;
 }
-.icon>img{
+.icon>img {
     border-radius: 10px;
 }
-.desc{
+.desc {
     padding: 10px;
-    margin-left:10px;
+    margin-left: 10px;
     text-wrap: wrap;
 }
-iframe{
-    width: 300px;
+iframe {
+    width: 100%;
+    max-width: 1200px;
+    height: 600px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top:90px;
+}
+.video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.box{
+    width: 90%;
+    /* background-color: ; */
+    height: 600px;
+    margin-top:30px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius:10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: row;
+    align-items: space-evenly;
+}
+.Basic{
+    margin:10px;
+    width:33%;
+    /* margin-left: 90px; */
+    border:1px solid;
+    border-radius: 10px;
+    padding: 20px;
+}
+.Basic>p{
+    font-weight: 700;
 }
