--- a/Project-4/styles.css
+++ b/Project-4/styles.css
@@ -161,6 +161,16 @@ iframe {
     border-radius: 10px;
     padding: 20px;
 }
-.Basic>p{
+.Basic p{
     font-weight: 700;
+    font-size: 40px;
+}
+.rant{
+    margin-top: 60px;
+    padding: 30px;
+}
+h6{
+    font-weight: 800;
+    margin-left: auto;
+    margin-right: auto;
 }
